# dither_some

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: dither_benchmark.rs  frame_benchmark.rs
src/: args.rs  cli.rs  dither.rs  ffmpeg.rs  frame.rs  lib.rs  main.rs
