[package]
name = "dither_some"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.175"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "frame_benchmark"
harness = false

[[bench]]
name = "dither_benchmark"
harness = false
